# TerraX

./: CMakeLists.txt  TerraX.sln
client/: CMakeLists.txt  client.cpp  client.h  client.vcxproj  client_conn_service.cpp  client_conn_service.h  client_net_module.cpp  client_net_module.h  client_packet_processor.cpp  client_packet_processor.h  game_state.cpp  game_state.h  game_state_manager.cpp  game_state_manager.h  guest.h  main.cpp  packet_processor.cpp  packet_processor.h
config/: client.json  game_server_profile.json  gate_server.json  login_server.json  master_server.json  node_server.json  world_server.json
lib/base/: auto_register.h  base.vcxproj  heap_vector.h  macro.h  make_heap.h  module_interface.h  multi_index_map.h  table.h  type_identify.h  types.h
lib/comm/: comm.vcxproj  comm.vcxproj.filters
lib/comm/config/: jsonstream.cpp  jsonstream.h
lib/comm/net/: net_define.h  packet.cpp  packet.h  packet_define.h  packet_template.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
lib/comm/proto/: base_type.pb.cc  base_type.pb.h  client_server.pb.cc  client_server.pb.h  server_server.pb.cc  server_server.pb.h
lib/srv/: srv.vcxproj  srv.vcxproj.filters
lib/srv/net/: net_base_module.cpp  net_base_module.h  packet_processor.cpp  packet_processor.h  server_accept_service.cpp  server_accept_service.h  server_conn_service.cpp  server_conn_service.h  server_login_ack_service.cpp  server_login_ack_service.h  server_login_req_service.cpp  server_login_req_service.h  server_table.cpp  server_table.h
server/db_server/: CMakeLists.txt  db_server.vcxproj  db_server.vcxproj.filters  main.cpp
server/db_server/db_server/: db_accept_service.cpp  db_accept_service.h  db_conn_service.cpp  db_conn_service.h  db_net_module.cpp  db_net_module.h  db_server.cpp  db_server.h
server/gate_server/: CMakeLists.txt  gate_server.vcxproj  gate_server.vcxproj.filters  main.cpp
server/gate_server/gate_account/: gate_account.cpp  gate_account.h  gate_account_manager.cpp  gate_account_manager.h  gate_account_state.cpp  gate_account_state.h
server/gate_server/gate_server/: gate_accept_service.cpp  gate_accept_service.h  gate_conn_service.cpp  gate_conn_service.h  gate_net_module.cpp  gate_net_module.h  gate_server.h
server/login_server/: CMakeLists.txt  login_server.vcxproj  login_server.vcxproj.filters  main.cpp
server/login_server/login_account/: Login_account.h  login_account.cpp  login_account_manager.cpp  login_account_manager.h  login_account_state.cpp  login_account_state.h
server/login_server/login_server/: login_accept_service.cpp  login_accept_service.h  login_conn_service.cpp  login_conn_service.h  login_net_module.cpp  login_net_module.h  login_server.cpp  login_server.h
server/master_server/: CMakeLists.txt  main.cpp  master_accept_service.cpp  master_accept_service.h  master_login_accept_service.cpp  master_login_accept_service.h  master_net_module.cpp  master_net_module.h  master_server.cpp  master_server.h  master_server.vcxproj  master_server.vcxproj.filters  master_world_accept_service.cpp  master_world_accept_service.h
server/master_server/server_manager/: login_server_object.cpp  login_server_object.h  server_manager.cpp  server_manager.h  world_server_object.h
server/master_server/world_server_manager/: world_server_manager.cpp  world_server_manager.h  world_server_object.cpp  world_server_object.h
server/node_server/: CMakeLists.txt  main.cpp  node_server.vcxproj  node_server.vcxproj.filters
server/node_server/node_server/: node_accept_service.cpp  node_accept_service.h  node_conn_service.cpp  node_conn_service.h  node_net_module.cpp  node_net_module.h  node_server.cpp  node_server.h
server/world_server/: CMakeLists.txt  main.cpp  world_server.vcxproj  world_server.vcxproj.filters
server/world_server/world_server/: world_accept_service.cpp  world_accept_service.h  world_conn_service.cpp  world_conn_service.h  world_net_module.cpp  world_net_module.h  world_server.cpp  world_server.h
server/world_server/world_server_manager/: gate_load_info.cpp  gate_load_info.h  node_load_info.cpp  node_load_info.h  world_account.cpp  world_account.h  world_account_manager.cpp  world_account_manager.h  world_account_state.cpp  world_account_state.h  world_loadbalancing_manager.cpp  world_loadbalancing_manager.h  world_server_manager.cpp  world_server_manager.h
testspace/: .gitignore
testspace/PerfectFSM/: PerfectFSM.sln  PerfectFSM.vcxproj  PerfectFSM.vcxproj.filters  abstract_behaviour.h  ai_controller.h  behaviour_args.h  component.h  concrete_behaviour.h  data_define.h  fsm_component.h  main.cpp
testspace/dataset/: column.cpp  column.h  dataset.cpp  dataset.h  dataset.sln  dataset.vcxproj  dataset.vcxproj.filters  dataset2.h  dynamic_bitset.h  field.h  file_reader.h  macro.h  main.cpp  metatable.h  property.h  property_define.h  rowdata.cpp  rowdata.h  table.h
testspace/dataset/data_pool_config/: item.json
testspace/dataset/dataset/: account.json  avatar.json  item.json
testspace/dataset/x64/Debug/: dataset.ilk  vc141.idb
tools/proto_make/protocol/: base_type.proto  client_server.proto  server_server.proto
(+7 files in other folders)
